# awesome-digital-human-live2d

./: .gitignore  pyproject.toml
configs/: config_template.yaml
configs/agents/: openaiAgent.yaml
configs/engines/llm/: openaiAPI.yaml
digitalHuman/agent/: agentPool.py
digitalHuman/engine/: enginePool.py
digitalHuman/engine/asr/: googleASR.py
digitalHuman/engine/llm/: openaiLLM.py
digitalHuman/engine/tts/: edgeTTS.py
digitalHuman/server/: api.py  asrApi.py  llmApi.py
digitalHuman/utils/: env.py
env_key/: __init__.py  index.py
web/: capacitor.config.ts  next.config.mjs  package.json  pnpm-lock.yaml
web/app/lib/: api.ts  character.ts  comm.ts  constants.ts
web/app/lib/live2d/: lappdefine.ts
web/app/ui/home/: chatbot.tsx  live2d.tsx  settings.tsx
