[tool.poetry]
name = "awesome-digital-human-live2d"
version = "0.1.0"
description = ""
authors = ["qiaochao <qiaochao@icourt.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
edge-tts = "6.1.17"
emoji = "2.14.0"
fastapi = "0.105.0"
httpx = "0.27.0"
numpy = "1.24.4"
pydub = "0.25.1"
pytest = "8.1.1"
pytest-asyncio = "0.23.6"
websockets = "13.0.1"
SpeechRecognition = "3.10.1"
requests = "2.31.0"
uvicorn = "0.26.0"
yacs = "0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
